test/parse/func/bad-local-binding-no-type.txt
;;; ERROR: 1
(module (func (local $n)))
(;; STDERR ;;;
out/test/parse/func/bad-local-binding-no-type.txt:2:24: error: unexpected token ")", expected i32, i64, f32 or f64.
(module (func (local $n)))
                       ^
;;; STDERR ;;)
